# pyinvisiblewatermark

./: README.md  pyproject.toml
example/: decode.py  encode.py
src/invisiblewatermark/: cli.py
src/pyinvisiblewatermark/: __init__.py  core.py
